# sdk-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-python-package.yml  publish.yml
src/talkops/: categories.json  extension.py  manifest.py  media.py  parameter.py  publisher.py  readme.jinja2  readme.py  subscriber.py
talkops/: __init__.py  attachment.py  event_bus.py  extension.py  image.py  link.py  manifest.py  parameter.py  publisher.py  subscriber.py  video.py
talkops/data/: event-types.json
