[project]
name = "talkops"
version = "0.0.5"
authors = [
  { name="PicoUX" },
]
description = "TalkOps SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/talkops/sdk-python"
Issues = "https://github.com/talkops/sdk-python/issues"